# protocol2bids

./: README.md  setup.cfg  setup.py
datasets/: README.md  convert.sh  convert_ABIDE1.sh  convert_ABIDE2.sh  convert_CoRR.sh
datasets/json/ABIDE2/BNI_1/: T1w.json  bold.json
datasets/json/ABIDE2/EMC_1/: T1w.json  bold.json
datasets/json/ABIDE2/ETH_1/: T1w.json  bold.json
datasets/json/ABIDE2/GU_1/: T1w.json  bold.json
datasets/json/ABIDE2/IP_1/: T1w.json
datasets/json/ABIDE2/IU_1/: T1w.json  bold.json
datasets/json/ABIDE2/KKI_1/: acq-rc32chan_T1w.json  acq-rc32chan_bold.json  acq-rc8chan_T1w.json  acq-rc8chan_bold.json  alt_acq-rc32chan_bold.json  alt_acq-rc8chan_bold.json
datasets/json/ABIDE2/KUL_3/: T1w.json  bold.json
datasets/json/ABIDE2/NYU_1/: bold.json
datasets/json/ABIDE2/NYU_2/: T1w.json  bold.json
datasets/json/ABIDE2/OHSU_1/: T1w.json  bold.json
datasets/json/ABIDE2/ONRC_2/: T1w.json  bold.json
datasets/json/ABIDE2/SDSU_1/: T1w.json  bold.json
datasets/json/ABIDE2/TCD_1/: T1w.json  bold.json
examples/: README.md  convert.sh
notes/: frequency_encoding.md  mprage.md  phase_encoding.md  rfspoil_increment.md  siemens_dicom.md  siemens_scanners.md  turboflash.md  vendor_sequences.md
protocol2bids/: cli.py  register.py
protocol2bids/utils/: font_recoder.py  nii2axes.py  prettify.py
protocol2bids/vendors/: fcon.py
protocol2bids/vendors/ge/: dicom_printout.py
protocol2bids/vendors/philips/: txt.py
protocol2bids/vendors/siemens/: common.py  utils.py  va.py  vb.py  vd.py  ve.py
schemas/: mri_sidecar.yaml
(+289 files in other folders)
