[metadata]
name = protocol2bids
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Convert protocol printouts of various MRI vendors to BIDS sidecars
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/protocol2bids

[options]
python_requires = >= 3.10
install_requires =
    requests        # HTTP requests
    cyclopts        # CLI
    pymupdf         # Parse PDF

[options.entry_points]
console_scripts =
    protocol2bids = protocol2bids.cli:app
    p2b = protocol2bids.cli:app
